<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_brand" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/all_authentication_text_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_brand" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/verification_text_account"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_message_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verification_text_description"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_title_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_first_code"
        style="@style/Widget.Nuwe.TextInputEditTextCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tiet_second_code"
        app:layout_constraintTop_toBottomOf="@id/txt_message_description" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_second_code"
        style="@style/Widget.Nuwe.TextInputEditTextCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@id/tiet_first_code"
        app:layout_constraintEnd_toStartOf="@id/tiet_third_code"
        app:layout_constraintTop_toBottomOf="@id/txt_message_description"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_third_code"
        style="@style/Widget.Nuwe.TextInputEditTextCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_message_description"
        app:layout_constraintStart_toEndOf="@id/tiet_second_code"
        app:layout_constraintEnd_toStartOf="@id/tiet_fourth_code"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_fourth_code"
        style="@style/Widget.Nuwe.TextInputEditTextCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_message_description"
        app:layout_constraintStart_toEndOf="@id/tiet_third_code"
        app:layout_constraintEnd_toStartOf="@id/tiet_fifth_code"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_fifth_code"
        style="@style/Widget.Nuwe.TextInputEditTextCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_message_description"
        app:layout_constraintStart_toEndOf="@id/tiet_fourth_code"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tiet_first_code, tiet_second_code, tiet_third_code, tiet_fourth_code, tiet_fifth_code"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_nuwe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_code"
        android:text="@string/verification_button_go_to_nuwe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>